// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalTesting HappyPathTest 1`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "roleArn": "arn:aws:iam::123456789012:role/service-role/LambdaSQSIntegration",
  },
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 1,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 0,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ExecutionStarted",
}
`;

exports[`LocalTesting HappyPathTest 2`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 2,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 0,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "Validation",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ParallelStateEntered",
}
`;

exports[`LocalTesting HappyPathTest 3`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 3,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 2,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ParallelStateStarted",
}
`;

exports[`LocalTesting HappyPathTest 4`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 4,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 3,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "Check Identity",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateEntered",
}
`;

exports[`LocalTesting HappyPathTest 5`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 5,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 3,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "Check Address",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateEntered",
}
`;

exports[`LocalTesting HappyPathTest 6`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 6,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 5,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": Object {
    "heartbeatInSeconds": undefined,
    "parameters": "{\\"FunctionName\\":\\"arn:aws:lambda:us-west-2:123456789012:function:check-address-function\\",\\"Payload\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"}}",
    "region": "us-east-1",
    "resource": "invoke",
    "resourceType": "lambda",
    "timeoutInSeconds": undefined,
  },
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskScheduled",
}
`;

exports[`LocalTesting HappyPathTest 7`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 7,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 6,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": Object {
    "resource": "invoke",
    "resourceType": "lambda",
  },
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStarted",
}
`;

exports[`LocalTesting HappyPathTest 8`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 8,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 7,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": Object {
    "output": "{\\"address\\":{\\"approved\\":true,\\"message\\":\\"address validation passed\\"}}",
    "outputDetails": Object {
      "truncated": false,
    },
    "resource": "invoke",
    "resourceType": "lambda",
  },
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskSucceeded",
}
`;

exports[`LocalTesting HappyPathTest 9`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 9,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 8,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": Object {
    "name": "Check Address",
    "output": "{\\"address\\":{\\"approved\\":true,\\"message\\":\\"address validation passed\\"}}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateExited",
}
`;

exports[`LocalTesting HappyPathTest 10`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 10,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 4,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": Object {
    "heartbeatInSeconds": undefined,
    "parameters": "{\\"FunctionName\\":\\"arn:aws:lambda:us-west-2:123456789012:function:check-identity-function\\",\\"Payload\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"}}",
    "region": "us-east-1",
    "resource": "invoke",
    "resourceType": "lambda",
    "timeoutInSeconds": undefined,
  },
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskScheduled",
}
`;

exports[`LocalTesting HappyPathTest 11`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 11,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 10,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": Object {
    "resource": "invoke",
    "resourceType": "lambda",
  },
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStarted",
}
`;

exports[`LocalTesting HappyPathTest 12`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 12,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 11,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": Object {
    "output": "{\\"identity\\":{\\"approved\\":true,\\"message\\":\\"identity validation passed\\"}}",
    "outputDetails": Object {
      "truncated": false,
    },
    "resource": "invoke",
    "resourceType": "lambda",
  },
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskSucceeded",
}
`;

exports[`LocalTesting HappyPathTest 13`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 13,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 12,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": Object {
    "name": "Check Identity",
    "output": "{\\"identity\\":{\\"approved\\":true,\\"message\\":\\"identity validation passed\\"}}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateExited",
}
`;

exports[`LocalTesting HappyPathTest 14`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 14,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 9,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ParallelStateSucceeded",
}
`;

exports[`LocalTesting HappyPathTest 15`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 15,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 14,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": Object {
    "name": "Validation",
    "output": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"addressResult\\":{\\"approved\\":true,\\"message\\":\\"address validation passed\\"},\\"identityResult\\":{\\"approved\\":true,\\"message\\":\\"identity validation passed\\"}}}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ParallelStateExited",
}
`;

exports[`LocalTesting HappyPathTest 16`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 16,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 15,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"addressResult\\":{\\"approved\\":true,\\"message\\":\\"address validation passed\\"},\\"identityResult\\":{\\"approved\\":true,\\"message\\":\\"identity validation passed\\"}}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "DetectSentiment",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateEntered",
}
`;

exports[`LocalTesting HappyPathTest 17`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 17,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 16,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": Object {
    "heartbeatInSeconds": undefined,
    "parameters": "{\\"LanguageCode\\":\\"en\\",\\"Text\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"}",
    "region": "us-east-1",
    "resource": "comprehend:detectSentiment",
    "resourceType": "aws-sdk",
    "timeoutInSeconds": undefined,
  },
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskScheduled",
}
`;

exports[`LocalTesting HappyPathTest 18`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 18,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 17,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": Object {
    "resource": "comprehend:detectSentiment",
    "resourceType": "aws-sdk",
  },
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStarted",
}
`;

exports[`LocalTesting HappyPathTest 19`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 19,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 18,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": Object {
    "output": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"sentimentAnalysis\\":{\\"Sentiment\\":\\"POSITIVE\\",\\"SentimentScore\\":{\\"Mixed\\":1.2647535E-4,\\"Negative\\":8.031699E-5,\\"Neutral\\":0.0051454515,\\"Positive\\":0.9946478}}}}",
    "outputDetails": Object {
      "truncated": false,
    },
    "resource": "comprehend:detectSentiment",
    "resourceType": "aws-sdk",
  },
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskSucceeded",
}
`;

exports[`LocalTesting HappyPathTest 20`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 20,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 19,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": Object {
    "name": "DetectSentiment",
    "output": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"sentimentAnalysis\\":{\\"Sentiment\\":\\"POSITIVE\\",\\"SentimentScore\\":{\\"Mixed\\":1.2647535E-4,\\"Negative\\":8.031699E-5,\\"Neutral\\":0.0051454515,\\"Positive\\":0.9946478}}}}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateExited",
}
`;

exports[`LocalTesting HappyPathTest 21`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 21,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 20,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"sentimentAnalysis\\":{\\"Sentiment\\":\\"POSITIVE\\",\\"SentimentScore\\":{\\"Mixed\\":1.2647535E-4,\\"Negative\\":8.031699E-5,\\"Neutral\\":0.0051454515,\\"Positive\\":0.9946478}}}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "Is Positive Sentiment?",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ChoiceStateEntered",
}
`;

exports[`LocalTesting HappyPathTest 22`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 22,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 21,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": Object {
    "name": "Is Positive Sentiment?",
    "output": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"sentimentAnalysis\\":{\\"Sentiment\\":\\"POSITIVE\\",\\"SentimentScore\\":{\\"Mixed\\":1.2647535E-4,\\"Negative\\":8.031699E-5,\\"Neutral\\":0.0051454515,\\"Positive\\":0.9946478}}}}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ChoiceStateExited",
}
`;

exports[`LocalTesting HappyPathTest 23`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 23,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 22,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"sentimentAnalysis\\":{\\"Sentiment\\":\\"POSITIVE\\",\\"SentimentScore\\":{\\"Mixed\\":1.2647535E-4,\\"Negative\\":8.031699E-5,\\"Neutral\\":0.0051454515,\\"Positive\\":0.9946478}}}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "Add to FollowUp",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateEntered",
}
`;

exports[`LocalTesting HappyPathTest 24`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 24,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 23,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": Object {
    "heartbeatInSeconds": undefined,
    "parameters": "{\\"Item\\":{\\"PK\\":{\\"S\\":\\"jdoe@example.com\\"}},\\"TableName\\":\\"FollowUpTable\\"}",
    "region": "us-east-1",
    "resource": "putItem",
    "resourceType": "dynamodb",
    "timeoutInSeconds": undefined,
  },
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskScheduled",
}
`;

exports[`LocalTesting HappyPathTest 25`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 25,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 24,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": Object {
    "resource": "putItem",
    "resourceType": "dynamodb",
  },
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStarted",
}
`;

exports[`LocalTesting HappyPathTest 26`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 26,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 25,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": Object {
    "output": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"dbUpdateStatusCode\\":200}}",
    "outputDetails": Object {
      "truncated": false,
    },
    "resource": "putItem",
    "resourceType": "dynamodb",
  },
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskSucceeded",
}
`;

exports[`LocalTesting HappyPathTest 27`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 27,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 26,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": Object {
    "name": "Add to FollowUp",
    "output": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"dbUpdateStatusCode\\":200}}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateExited",
}
`;

exports[`LocalTesting HappyPathTest 28`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 28,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 27,
  "stateEnteredEventDetails": Object {
    "input": "{\\"data\\":{\\"firstname\\":\\"Jane\\",\\"lastname\\":\\"Doe\\",\\"identity\\":{\\"email\\":\\"jdoe@example.com\\",\\"ssn\\":\\"123-45-6789\\"},\\"address\\":{\\"street\\":\\"123 Main St\\",\\"city\\":\\"Columbus\\",\\"state\\":\\"OH\\",\\"zip\\":\\"43219\\"},\\"comments\\":\\"I am glad to sign-up for this service. Looking forward to different options.\\"},\\"results\\":{\\"dbUpdateStatusCode\\":200}}",
    "inputDetails": Object {
      "truncated": false,
    },
    "name": "CustomerAddedToFollowup",
  },
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateEntered",
}
`;

exports[`LocalTesting HappyPathTest 29`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 29,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 28,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": Object {
    "heartbeatInSeconds": undefined,
    "parameters": "{\\"Entries\\":[{\\"Detail\\":{\\"Message\\":\\"Customer Added for follow up\\",\\"EmailAddress\\":\\"jdoe@example.com\\"},\\"DetailType\\":\\"CustomerAdded\\",\\"Source\\":\\"LocalTestingSource\\"}]}",
    "region": "us-east-1",
    "resource": "putEvents",
    "resourceType": "events",
    "timeoutInSeconds": undefined,
  },
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskScheduled",
}
`;

exports[`LocalTesting HappyPathTest 30`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 30,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 29,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": Object {
    "resource": "putEvents",
    "resourceType": "events",
  },
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStarted",
}
`;

exports[`LocalTesting HappyPathTest 31`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 31,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 30,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": Object {
    "output": "{\\"StatusCode\\":200,\\"Payload\\":{\\"statusCode\\":200}}",
    "outputDetails": Object {
      "truncated": false,
    },
    "resource": "putEvents",
    "resourceType": "events",
  },
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskSucceeded",
}
`;

exports[`LocalTesting HappyPathTest 32`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": undefined,
  "executionTimedOutEventDetails": undefined,
  "id": 32,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 31,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": Object {
    "name": "CustomerAddedToFollowup",
    "output": "{\\"StatusCode\\":200,\\"Payload\\":{\\"statusCode\\":200}}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "TaskStateExited",
}
`;

exports[`LocalTesting HappyPathTest 33`] = `
Object {
  "activityFailedEventDetails": undefined,
  "activityScheduleFailedEventDetails": undefined,
  "activityScheduledEventDetails": undefined,
  "activityStartedEventDetails": undefined,
  "activitySucceededEventDetails": undefined,
  "activityTimedOutEventDetails": undefined,
  "executionAbortedEventDetails": undefined,
  "executionFailedEventDetails": undefined,
  "executionStartedEventDetails": undefined,
  "executionSucceededEventDetails": Object {
    "output": "{\\"StatusCode\\":200,\\"Payload\\":{\\"statusCode\\":200}}",
    "outputDetails": Object {
      "truncated": false,
    },
  },
  "executionTimedOutEventDetails": undefined,
  "id": 33,
  "lambdaFunctionFailedEventDetails": undefined,
  "lambdaFunctionScheduleFailedEventDetails": undefined,
  "lambdaFunctionScheduledEventDetails": undefined,
  "lambdaFunctionStartFailedEventDetails": undefined,
  "lambdaFunctionSucceededEventDetails": undefined,
  "lambdaFunctionTimedOutEventDetails": undefined,
  "mapIterationAbortedEventDetails": undefined,
  "mapIterationFailedEventDetails": undefined,
  "mapIterationStartedEventDetails": undefined,
  "mapIterationSucceededEventDetails": undefined,
  "mapStateStartedEventDetails": undefined,
  "previousEventId": 32,
  "stateEnteredEventDetails": undefined,
  "stateExitedEventDetails": undefined,
  "taskFailedEventDetails": undefined,
  "taskScheduledEventDetails": undefined,
  "taskStartFailedEventDetails": undefined,
  "taskStartedEventDetails": undefined,
  "taskSubmitFailedEventDetails": undefined,
  "taskSubmittedEventDetails": undefined,
  "taskSucceededEventDetails": undefined,
  "taskTimedOutEventDetails": undefined,
  "timestamp": Anything,
  "type": "ExecutionSucceeded",
}
`;
